--- a/portfolio/servicios.html
+++ b/portfolio/servicios.html
@@ -21,6 +21,22 @@
             </nav>
         </div>
     </header>
+    <div class="serv1">
+       <h1>Portes<br></h1>
+
+    </div>
+    <div class="serv1">
+       <h1>Nacional<br></h1>
+
+    </div>
+     <div class="serv1">
+       <h1>Intenacional<br></h1>
+
+    </div>
+     <div class="serv1">
+       <h1>Urgente<br></h1>
+
+    </div>
 </body>
 
 </html>
