--- a/portfolio/servicios.html
+++ b/portfolio/servicios.html
@@ -21,20 +21,21 @@
             </nav>
         </div>
     </header>
-    <div class="serv1">
+    <div class="Fserv1">
        <h1>Portes<br></h1>
 
     </div>
-    <div class="serv1">
+    <div class="Fserv1">
        <h1>Nacional<br></h1>
 
     </div>
-     <div class="serv1">
+     <div class="Fserv1">
        <h1>Intenacional<br></h1>
 
     </div>
-     <div class="serv1">
+     <div class="Fserv1">
        <h1>Urgente<br></h1>
+    <br>
 
     </div>
 </body>
