pagina principal y main

--- a/index1.0.html
+++ b/index1.0.html
@@ -12,7 +12,7 @@
         <div class="navbar">
             <div class="logo"><img src="img/logoseur.jpg"></div>
             <nav>
-                <a href="#">Inicio</a>
+                <a href="#" >Inicio</a>
                 <a href="#">Quienes somos</a>
                 <a href="#">Servicios</a>
                 <a href="#">Tracker</a>
@@ -28,19 +28,25 @@
     <section class="infos">
         <div class="info">
             <div class="datos">
-                <h3>CONTACTO</h3>
-                <p>KOPPLER TRANSPORTE S.L.<br>C/RAPIDEZ, 231<br>MADRID, ESPAÑA, 28002</p>
+                <h3>DONDE ESTAMOS</h3>
+                <p>KOPPLER TRANSPORTE S.L.<br>C/RAPIDEZ, 231<br>MADRID, ESPAÑA, 28002<br><br>TLF: 91 234 56 78<br>EMAIL: info@koppler.com<br><br><br><br><br><br><br><br><br></p>
+                <a href="#"><div class="btrabaja">&nbsp;&nbsp;TRABAJA CON NOSOTROS&nbsp;</div></a>
             </div>
-            <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12157.987656788486!2d-3.9149567999999992!3d40.37567815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1580325277165!5m2!1ses!2ses"></iframe>
-            </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12157.987656788486!2d-3.9149567999999992!3d40.37567815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1580325277165!5m2!1ses!2ses"></iframe>
         </div>
-        <div class="info">
-           <div class="noticias">
-            <h3>ULTIMAS NOTICIAS</h3>
+        <div class="info2">
+            <div class="noticias">
+                <h3>ULTIMAS NOTICIAS</h3>
+                <p><a href="https://www.abc.es/motor/reportajes/abci-hidrogeno-combustible-futuro-planta-cara-petroleo-201904032036_noticia.html?ref=https%3A%2F%2Fwww.google.com%2F">- Las furgonetas nuevas empezaran a utilizar combustible de hidrogeno</a></p>
+                <img src="img/hidrogeno.jpg" />
             </div>
         </div>
     </section>
+    <footer>
+       <div class="crea">Creado por ForCode++</div>
+        <div class="logofooter"><img src="img/logoseur.jpg"></div>
+        <div class="pi">Todos los derechos reservados</div>
+    </footer>
 </body>
 
 </html>
