modificacion quienes somos

--- a/portfolio/quienessomos.html
+++ b/portfolio/quienessomos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="../css/main.css" />
+    <link rel="stylesheet" type="text/css" href="../css/quienessomos.css" />
     <title>Koppler Transporte Urgente</title>
 </head>
 
@@ -21,6 +21,23 @@
             </nav>
         </div>
     </header>
+
+<h1 class="MTitulo">koppler Transporte Urgente</h1>
+   <h2>Breve historia</h2>
+    <p class="Mcuerpo">Comenzamos con un pequeño proyecto familiar, que con el paso del tiempo y el buen hacer
+    <br>fue creciendo  paulatinamente hasta convertirnos en una de las empresas de referencia,
+    <br>con dedicación plena y un amplio conocimiento del sector.
+    <br> Actualmente contamos con una extensa flota de vehiculos con diferentes funcionalidades.
+    <br>Nuestra plantilla esta formada por 8 profesionales serios con reconocida experiencia en el sector.
+    </p>
+    <h2>¿Por que elgirnos?</h2>
+     <p class="Mcuerpo2" >Mucho mas que una empresa de transporte somos el profesional que estas buscando.
+       <br>Servicio personalizado, eficiente y rapido
+       <br>Horarios flexibles: Recogida y entrega en los horarios establecidos por el cliente.
+       <br>Seguro de transporte de mercancia con amplia covertura.
+       </p>
+
+
 </body>
 
 </html>
