--- a/index1.0.html
+++ b/index1.0.html
@@ -13,7 +13,7 @@
             <div class="logo"><img src="img/logoseur.jpg"></div>
             <nav>
                 <a href="#" >Inicio</a>
-                <a href="#">Quienes somos</a>
+                <a href="portfolio/quienessomos.html">Quienes somos</a>
                 <a href="#">Servicios</a>
                 <a href="#">Tracker</a>
                 <a href="#">Contacto</a>
