--- a/portfolio/quienessomos.html
+++ b/portfolio/quienessomos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="../css/quienessomos.css" />
+    <link rel="stylesheet" type="text/css" href="../css/main.css" />
     <title>Koppler Transporte Urgente</title>
 </head>
 
@@ -12,7 +12,7 @@
         <div class="navbar">
             <div class="logo"><img src="../img/logoseur.jpg"></div>
             <nav>
-                <a href="#">Inicio</a>
+                <a href="../index1.0.html">Inicio</a>
                 <a href="#">Quienes somos</a>
                 <a href="#">Servicios</a>
                 <a href="#">Tracker</a>
@@ -21,23 +21,35 @@
             </nav>
         </div>
     </header>
+    <div class="Mcuerpo">
+        <div class="McuerpoB"><img src="../img/Mcuerpo2.jpg"></div>
+        <div class="McuerpoA">
+            <h2>Breve historia</h2>
+            <p>Comenzamos con un pequeño proyecto familiar, que con el paso del tiempo y el <br>buen hacer
+                fue creciendo paulatinamente hasta convertirnos en una de las<br> empresas de referencia,
+                con dedicación plena y un amplio conocimiento del sector.
+                <br> Actualmente contamos con una extensa flota de vehiculos con diferentes <br>funcionalidades.
+                Nuestra plantilla esta formada por 8 profesionales serios con <br>reconocida experiencia en el sector.
+            </p>
+        </div>
+    </div>
+    <div class="Mcuerpo2">
+        <div class="Mcuerpo2B"><img src="../img/Mcuerpo.jpg"></div>
+        <div class="Mcuerpo2A">
+            <h2>¿Por que elegirnos?</h2>
+            <p>Mucho mas que una empresa de transporte somos el profesional que <br>estas buscando:<br><br>
+                - Servicio personalizado, eficiente y rapido.<br>
+                <br>- Horarios flexibles: Recogida y entrega en los horarios establecidos por el <br>cliente.<br>
+                <br>- Seguro de transporte de mercancia con amplia covertura.
+            </p>
+        </div>
 
-<h1 class="MTitulo">koppler Transporte Urgente</h1>
-   <h2>Breve historia</h2>
-    <p class="Mcuerpo">Comenzamos con un pequeño proyecto familiar, que con el paso del tiempo y el buen hacer
-    <br>fue creciendo  paulatinamente hasta convertirnos en una de las empresas de referencia,
-    <br>con dedicación plena y un amplio conocimiento del sector.
-    <br> Actualmente contamos con una extensa flota de vehiculos con diferentes funcionalidades.
-    <br>Nuestra plantilla esta formada por 8 profesionales serios con reconocida experiencia en el sector.
-    </p>
-    <h2>¿Por que elgirnos?</h2>
-     <p class="Mcuerpo2" >Mucho mas que una empresa de transporte somos el profesional que estas buscando.
-       <br>Servicio personalizado, eficiente y rapido
-       <br>Horarios flexibles: Recogida y entrega en los horarios establecidos por el cliente.
-       <br>Seguro de transporte de mercancia con amplia covertura.
-       </p>
+    </div>
 
+    <footer>
+        <div class="crea">Creado por ForCode++</div>
+        <div class="logofooter"><img src="../img/logoseur.jpg"></div>
+        <div class="pi">Todos los derechos reservados</div>
+    </footer>
 
-</body>
-
-</html>
+</body></html>
