quienes somos y trabaja con nosotros terminado

--- a/index1.0.html
+++ b/index1.0.html
@@ -17,7 +17,7 @@
                 <a href="#">Servicios</a>
                 <a href="#">Tracker</a>
                 <a href="#">Contacto</a>
-                <a href="#">Trabaja con nosotros</a>
+                <a href="portfolio/trabajaconnosostros.html">Trabaja con nosotros</a>
             </nav>
         </div>
     </header>
