--- a/portfolio/trabajaconnosostros.html
+++ b/portfolio/trabajaconnosostros.html
@@ -12,8 +12,8 @@
         <div class="navbar">
             <div class="logo"><img src="../img/logoseur.jpg"></div>
             <nav>
-                <a href="#">Inicio</a>
-                <a href="#">Quienes somos</a>
+                <a href="../index1.0.html">Inicio</a>
+                <a href="quienessomos.html">Quienes somos</a>
                 <a href="#">Servicios</a>
                 <a href="#">Tracker</a>
                 <a href="#">Contacto</a>
@@ -21,6 +21,57 @@
             </nav>
         </div>
     </header>
-</body>
 
-</html>
+   <section class="img_central1">
+        <img src="../img/Furgo-blanca-TcN.jpg">
+    </section>
+
+    <div class="Ploqbuscamos">
+        <h2>Lo que Buscamos y Ofrecemos</h2>
+        <p>Para que una persona trabaje en nuestra empresa, principalmente queremos gente con muchas ganas de trabajar, puntual y con dedicación. Una persona con esas cualidades tendrá muchas probabilidades de conseguir beneficios, como:
+            <br><br>
+            - Sueldo de entre 26k y 38k/brutos anuales.
+            <br><br>
+            - Ser tu propio jefe, con posibilidad de ascender y obtener una mayor cantidad de envios y beneficios.
+        </p>
+    </div>
+    <div class="PRequisitos">
+        <h2>Requisitos</h2>
+        <p>Los requisitos que estamos buscando son:
+            <br><br>
+            - Carnet de conducir B.
+            <br><br>
+            - Horario flexible de trabajo.
+            <br><br>
+            - Experiencia minima: 2 años.
+            <br><br>
+            - Titulo de Bachillerato y nivel de inglés B2
+        </p>
+    </div>
+
+    <div class="Poferta">
+        <h2>Inscripción a Oferta de Trabajo</h2>
+        <form action="mailto:koppler@gmail.com" name="PFoferta" method="post">
+            <p>Nombre: &nbsp;&nbsp;<input type="text" name="nombre" value="" size="40" required> </p>
+            <p>Apellidos: &nbsp;<input type="text" name="apellido" value="" size="40" required></p>
+            <p>Experiencia Laboral: &nbsp;&nbsp;<select name="Edad" required>
+                    <option value="" selected></option>
+                    <option value="">Menos de 1 año</option>
+                    <option value="">Entre 1 año y 3 años</option>
+                    <option value="">Mas de tres años</option>
+                </select></p>
+            <br>
+            <p>Comentarios:</p>
+            <p><textarea class="formtexa"></textarea></p>
+            <p>Curriculum vitae:&nbsp; <input type="file" name="curriculum" required></p>
+            <br>
+            <p><input type="submit" name="Enviar">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="reset" name="reset"></p>
+        </form>
+    </div>
+
+    <footer>
+        <div class="crea">Creado por ForCode++</div>
+        <div class="logofooter"><img src="../img/logoseur.jpg"></div>
+        <div class="pi">Todos los derechos reservados</div>
+    </footer>
+</body></html>
