--- a/portfolio/quienessomos.html
+++ b/portfolio/quienessomos.html
@@ -17,10 +17,15 @@
                 <a href="#">Servicios</a>
                 <a href="#">Tracker</a>
                 <a href="#">Contacto</a>
-                <a href="#">Trabaja con nosotros</a>
+                <a href="trabajaconnosostros.html">Trabaja con nosotros</a>
             </nav>
         </div>
     </header>
+
+    <section class="img_central1">
+        <img src="../img/Furgo-blanca-QS.jpg">
+    </section>
+
     <div class="Mcuerpo">
         <div class="McuerpoB"><img src="../img/Mcuerpo2.jpg"></div>
         <div class="McuerpoA">
