Modificado lo de fran

--- a/portfolio/servicios.html
+++ b/portfolio/servicios.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="../css/servicios.css" />
+    <link rel="stylesheet" type="text/css" href="../css/main.css" />
     <title>Koppler Transporte Urgente</title>
 </head>
 
@@ -12,12 +12,12 @@
         <div class="navbar">
             <div class="logo"><img src="../img/logoseur.jpg"></div>
             <nav>
-                <a href="#">Inicio</a>
-                <a href="#">Quienes somos</a>
+                <a href="../index1.0.html">Inicio</a>
+                <a href="quienessomos.html">Quienes somos</a>
                 <a href="#">Servicios</a>
                 <a href="#">Tracker</a>
-                <a href="#">Contacto</a>
-                <a href="#">Trabaja con nosotros</a>
+                <a href="contacto.html">Contacto</a>
+                <a href="trabajaconnosostros.html">Trabaja con nosotros</a>
             </nav>
         </div>
     </header>
