Footer-Condiciones-y-politicas

--- a/portfolio/politicadeprivacidad.html
+++ b/portfolio/politicadeprivacidad.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../css/contacto.css" />
     <title>Politica de Privacidad</title>
 </head>
 <body>
+    
     <p><h1>POLÍTICA DE PRIVACIDAD</h1>
         Protección de datos de carácter personal según la LOPD
         _____________________________, en aplicación de la normativa vigente en materia de protección de datos de carácter
@@ -145,5 +147,19 @@
         ____________________________ que sean similares a los que inicialmente fueron objeto de contratación con el cliente.
         En todo caso, el usuario, tras acreditar su identidad, podrá solicitar que no se le haga llegar más información comercial a
         través de los canales de Atención al Cliente.</p>
+
+        <div>
+            <div>
+                <h3><a href="index.html">
+                        Kooplers</a></h3>
+                <p  class="XFooter">©2020 <a href="../index1.0.html"> Kopplers </a> All Rights
+                    Reserved | Design by
+                    <a href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk">ForCode++ </a>
+                    <p class="XFooter">Edited by ForCode++ <a href="ForCode++@gmail.com"> Email</a></p>
+                </p>
+            </div>
+      
+                </ul>
+            </div>
 </body>
 </html>
