--- a/portfolio/condicionesdeservicio.html
+++ b/portfolio/condicionesdeservicio.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../css/contacto.css" />
     <title>Condiciones de Servicio</title>
   </head>
   <body>
     <p>
+      <h1>Condiciones de Servicio</h1>
       Algunos de nuestros servicios te permiten enviar contenido. Si lo haces,
       seguirás siendo el titular de los derechos de propiedad intelectual que
       tengas sobre ese contenido. En pocas palabras, lo que te pertenece, tuyo
@@ -40,5 +42,20 @@
       condiciones modificadas de un Servicio, deberás dejar de usar dicho
       Servicio.
     </p>
+
+
+    <div>
+      <div>
+          <h3><a href="index.html">
+                  Kooplers</a></h3>
+          <p  class="XFooter">©2020 <a href="../index1.0.html"> Kopplers </a> All Rights
+              Reserved | Design by
+              <a href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk">ForCode++ </a>
+              <p class="XFooter">Edited by ForCode++ <a href="ForCode++@gmail.com"> Email</a></p>
+          </p>
+      </div>
+
+          </ul>
+      </div>
   </body>
 </html>
