--- a/portfolio/trabajaconnosostros.html
+++ b/portfolio/trabajaconnosostros.html
@@ -14,9 +14,9 @@
             <nav>
                 <a href="../index1.0.html">Inicio</a>
                 <a href="quienessomos.html">Quienes somos</a>
-                <a href="#">Servicios</a>
+                <a href="servicios.html">Servicios</a>
                 <a href="#">Tracker</a>
-                <a href="#">Contacto</a>
+                <a href="contacto.html">Contacto</a>
                 <a href="#">Trabaja con nosotros</a>
             </nav>
         </div>
@@ -36,7 +36,7 @@
         </p>
     </div>
     <div class="PRequisitos">
-        <h2>Requisitos</h2>
+        <h2>Requisitos Minimos</h2>
         <p>Los requisitos que estamos buscando son:
             <br><br>
             - Carnet de conducir B.
@@ -52,26 +52,35 @@
     <div class="Poferta">
         <h2>Inscripción a Oferta de Trabajo</h2>
         <form action="mailto:koppler@gmail.com" name="PFoferta" method="post">
-            <p>Nombre: &nbsp;&nbsp;<input type="text" name="nombre" value="" size="40" required> </p>
-            <p>Apellidos: &nbsp;<input type="text" name="apellido" value="" size="40" required></p>
+            <p>Nombre: &nbsp;&nbsp;<input type="text" name="nombre" value="" size="40" required>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Apellidos: &nbsp;<input type="text" name="apellido" value="" size="40" required></p>
             <p>Experiencia Laboral: &nbsp;&nbsp;<select name="Edad" required>
                     <option value="" selected></option>
                     <option value="">Menos de 1 año</option>
                     <option value="">Entre 1 año y 3 años</option>
                     <option value="">Mas de tres años</option>
-                </select></p>
+                </select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Curriculum vitae:&nbsp; <input type="file" name="curriculum" required>
+            </p>
+            <p>Email: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="email" size="50" required></p>
             <br>
             <p>Comentarios:</p>
             <p><textarea class="formtexa"></textarea></p>
-            <p>Curriculum vitae:&nbsp; <input type="file" name="curriculum" required></p>
-            <br>
-            <p><input type="submit" name="Enviar">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="reset" name="reset"></p>
+
+            <br><div class="envires"><p><input type="submit" name="Enviar">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="reset" name="reset"></p></div><br>
+            <div class="condiuso">
+            <p class="XCondicion"><input type="checkbox" name="condiciones" value="check" required checked>
+                Deseo Recibir informacion sobre nuevas ofertas y noticias de <b><i><u>Koppler</u></i></b>. </p>
+            <p class="XCondicion"><input type="checkbox" name="condiciones" value="check" required>Acepto las<a href="../portfolio/condicionesdeservicio.html">
+                    Condiciones del servicio</a> y la
+                <a href="./politicadeprivacidad.html">Politica de privacidad</a> de <b><i><u>Koppler</u></i></b>. <br></p></div><br>
+
         </form>
     </div>
 
     <footer>
-        <div class="crea">Creado por ForCode++</div>
-        <div class="logofooter"><img src="../img/logoseur.jpg"></div>
-        <div class="pi">Todos los derechos reservados</div>
+       <div class="crea"><p  class="XFooter">©2020 <a href="../index1.0.html"> Kopplers </a> All Rights
+              Reserved <br><br> Designed by
+              <a href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk">ForCode++ </a>
+              </div>
+        <div class="logofooter"><img src="../img/logo-uem.png"></div>
     </footer>
 </body></html>
