--- a/index1.0.html
+++ b/index1.0.html
@@ -14,23 +14,23 @@
             <nav>
                 <a href="#" >Inicio</a>
                 <a href="portfolio/quienessomos.html">Quienes somos</a>
-                <a href="#">Servicios</a>
+                <a href="portfolio/servicios.html">Servicios</a>
                 <a href="#">Tracker</a>
-                <a href="#">Contacto</a>
+                <a href="portfolio/contacto.html">Contacto</a>
                 <a href="portfolio/trabajaconnosostros.html">Trabaja con nosotros</a>
             </nav>
         </div>
     </header>
 
     <section class="img_central">
-        <img src="img/Furgo-blanca.jpg">
+        <img src="img/primera-impresion.png">
     </section>
     <section class="infos">
         <div class="info">
             <div class="datos">
                 <h3>DONDE ESTAMOS</h3>
                 <p>KOPPLER TRANSPORTE S.L.<br>C/RAPIDEZ, 231<br>MADRID, ESPAÑA, 28002<br><br>TLF: 91 234 56 78<br>EMAIL: info@koppler.com<br><br><br><br><br><br><br><br><br></p>
-                <a href="#"><div class="btrabaja">&nbsp;&nbsp;TRABAJA CON NOSOTROS&nbsp;</div></a>
+                <a href="portfolio/trabajaconnosostros.html"><div class="btrabaja">&nbsp;&nbsp;TRABAJA CON NOSOTROS&nbsp;</div></a>
             </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12157.987656788486!2d-3.9149567999999992!3d40.37567815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1580325277165!5m2!1ses!2ses"></iframe>
         </div>
@@ -43,9 +43,11 @@
         </div>
     </section>
     <footer>
-       <div class="crea">Creado por ForCode++</div>
-        <div class="logofooter"><img src="img/logoseur.jpg"></div>
-        <div class="pi">Todos los derechos reservados</div>
+       <div class="crea"><p  class="XFooter">©2020 <a href="../index1.0.html"> Kopplers </a> All Rights
+              Reserved <br><br> Designed by
+              <a href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk">ForCode++ </a>
+              </div>
+        <div class="logofooter"><img src="img/logo-uem.png"></div>
     </footer>
 </body>
 
