--- a/portfolio/quienessomos.html
+++ b/portfolio/quienessomos.html
@@ -14,9 +14,9 @@
             <nav>
                 <a href="../index1.0.html">Inicio</a>
                 <a href="#">Quienes somos</a>
-                <a href="#">Servicios</a>
+                <a href="servicios.html">Servicios</a>
                 <a href="#">Tracker</a>
-                <a href="#">Contacto</a>
+                <a href="contacto.html">Contacto</a>
                 <a href="trabajaconnosostros.html">Trabaja con nosotros</a>
             </nav>
         </div>
@@ -52,9 +52,11 @@
     </div>
 
     <footer>
-        <div class="crea">Creado por ForCode++</div>
-        <div class="logofooter"><img src="../img/logoseur.jpg"></div>
-        <div class="pi">Todos los derechos reservados</div>
+       <div class="crea"><p  class="XFooter">©2020 <a href="../index1.0.html"> Kopplers </a> All Rights
+              Reserved <br><br> Designed by
+              <a href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk">ForCode++ </a>
+              </div>
+        <div class="logofooter"><img src="../img/logo-uem.png"></div>
     </footer>
 
 </body></html>
