--- a/portfolio/servicios.html
+++ b/portfolio/servicios.html
@@ -15,7 +15,6 @@
                 <a href="../index1.0.html">Inicio</a>
                 <a href="quienessomos.html">Quienes somos</a>
                 <a href="#">Servicios</a>
-                <a href="#">Tracker</a>
                 <a href="contacto.html">Contacto</a>
                 <a href="trabajaconnosostros.html">Trabaja con nosotros</a>
             </nav>
@@ -49,7 +48,7 @@
                 <div class="Fimagen">
                     <img src="../img/envioNavional.png" />
                     <div class="Foverlay">
-                        <h2 class="Ftexto">TRANSPORTE NACIONAL<br>Te llevamos cualquier paquete que desees dentro del terrirorio nacional (islas canarias y baleares no estan sujetas a este apartado) por un modico precio. Para más informacion vaya a la seccion de informacion y rellene el formulario.</h2>
+                        <h2 class="Ftexto">TRANSPORTE NACIONAL<br>Te llevamos cualquier paquete que desees dentro del terrirorio nacional (islas canarias y baleares no estan sujetas a este apartado) por un modico precio. Para más información vaya a la sección de información y rellene el formulario.</h2>
                     </div>
                 </div>
             </div>
@@ -58,7 +57,7 @@
                 <div class="Fimagen">
                     <img src="../img/envioEUl.png" />
                     <div class="Foverlay">
-                        <h2 class="Ftexto">TRANSPORTE INTERNACIONAL<br> Si lo que necesitas es llevar cualquier paquete, mueble o pedido fuera del territorio nacional lo haremos sin ningun problema.</h2>
+                        <h2 class="Ftexto">TRANSPORTE INTERNACIONAL<br> Si lo que necesitas es llevar cualquier paquete, mueble o pedido fuera del territorio nacional lo haremos sin ningún problema.</h2>
                     </div>
                 </div>
             </div>
@@ -74,11 +73,24 @@
         </div>
     </div>
     <div class="Fvaloracion">
-       <h1>Valora nuestro servicio</h1>
+        <h1>Valora nuestro servicio</h1>
         <form action="mailto:Kopplers@gmail.com" method="post">
-            <p>Nombre:  <input type="text" name="nombre" size="40"></p>
-            <p>E-mail:  <input type="number" name="mail" min="1900"></p>
-            <p>Valoracion sobre 10:  <input type="number" name="valor" min="0" max="10"></p>
+            <p>Nombre: <input type="text" name="nombre" size="40"></p>
+            <p>E-mail: <input type="number" name="mail" min="1900"></p>
+            <p>Valoración: <select>
+                    <option value="0" selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
+            </p>
             <p>
                 <input type="submit" value="Enviar">
                 <input type="reset" value="Borrar">
