--- a/portfolio/politicadeprivacidad.html
+++ b/portfolio/politicadeprivacidad.html
@@ -156,10 +156,13 @@
                     Reserved | Design by
                     <a href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk">ForCode++ </a>
                     <p class="XFooter">Edited by ForCode++ <a href="ForCode++@gmail.com"> Email</a></p>
-                </p>
+                    <ul class="social-icons d-flex justify-content-end mt-3">
+                        <li class="mr-1"><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+                        <li class="mx-1"><a href="#"><span class="fab fa-twitter"></span></a></li>
+                        <li class="mx-1"><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
+                        <li class="mx-1"><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
+                    </ul>
             </div>
-      
-                </ul>
             </div>
 </body>
 </html>
