--- a/portfolio/condicionesdeservicio.html
+++ b/portfolio/condicionesdeservicio.html
@@ -57,5 +57,17 @@
 
           </ul>
       </div>
+
+
+      <div class="Xcontainer">
+      
+      </div>
+    
+      <div class="social">
+        <a href="#"><img class="icon" src="../img/facebook.png" alt="facebook"></a>
+        <a href="#"><img class="icon" src="../img/youtube.png" alt="youtube"></a>
+        <a href="#"><img class="icon" src="../img/linkedin.png" alt="linkedin"></a>
+        <a href="#"><img class="icon" src="../img/instagram.png" alt="instagram"></a>
+      </div>
   </body>
 </html>
