--- a/portfolio/servicios.html
+++ b/portfolio/servicios.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="../css/servicios.css" />
+    <link rel="stylesheet" type="text/css" href="../css/main.css" />
     <title>Koppler Transporte Urgente</title>
 </head>
 
