Modificacion general y servicios - p

--- a/portfolio/servicios.html
+++ b/portfolio/servicios.html
@@ -24,7 +24,8 @@
     <div class="Fcontenedor-frase">
         <!--<img src="../img/repartos.png" class="Fimage"/>-->
         <h1 class="Ffrase">Nuestros clientes tendrán el mejor servicio a un precio asequible</h1>
-        <h2 class="Ffrase-peq">Por ello queremos asegurarnos que elijas el servicio indicado.</h2>
+        <h2 class="Ffrase-peq">Por ello queremos asegurarnos que elijas el servicio indicado.<br></h2>
+        <p></p>
         <aside>
             <h3><a href="contacto.html">Más información</a></h3>
         </aside>
@@ -32,14 +33,14 @@
     </div>
 
     <div class="FcontenedorTodo">
-        <h1>Servicios que ofrecemos</h1>
+        <h2>Servicios que ofrecemos</h2>
         <div class="Fcontenedor-imagenes">
 
             <div class="Fcontenedor">
                 <div class="Fimagen">
                     <img src="../img/Portes.png" />
                     <div class="Foverlay">
-                        <h2 class="Ftexto">PORTES<br>Tenemos una gran flota de vehiculos para ayudarte en el caso de que quieras transportar cualquier tipo y cantidad de muebles. Para más informacion vaya a la seccion de informacion y rellene el formulario.</h2>
+                        <h3 class="Ftexto">PORTES<br>Tenemos una gran flota de vehiculos para ayudarte en el caso de que quieras transportar cualquier tipo y cantidad de muebles. Para más informacion vaya a la seccion de informacion y rellene el formulario.</h3>
                     </div>
                 </div>
             </div>
@@ -48,7 +49,7 @@
                 <div class="Fimagen">
                     <img src="../img/envioNavional.png" />
                     <div class="Foverlay">
-                        <h2 class="Ftexto">TRANSPORTE NACIONAL<br>Te llevamos cualquier paquete que desees dentro del terrirorio nacional (islas canarias y baleares no estan sujetas a este apartado) por un modico precio. Para más información vaya a la sección de información y rellene el formulario.</h2>
+                        <h3 class="Ftexto">TRANSPORTE NACIONAL<br>Te llevamos cualquier paquete que desees dentro del terrirorio nacional (islas canarias y baleares no estan sujetas a este apartado) por un modico precio. Para más información vaya a la sección de información y rellene el formulario.</h3>
                     </div>
                 </div>
             </div>
@@ -57,7 +58,7 @@
                 <div class="Fimagen">
                     <img src="../img/envioEUl.png" />
                     <div class="Foverlay">
-                        <h2 class="Ftexto">TRANSPORTE INTERNACIONAL<br> Si lo que necesitas es llevar cualquier paquete, mueble o pedido fuera del territorio nacional lo haremos sin ningún problema.</h2>
+                        <h3 class="Ftexto">TRANSPORTE INTERNACIONAL<br> Si lo que necesitas es llevar cualquier paquete, mueble o pedido fuera del territorio nacional lo haremos sin ningún problema.</h3>
                     </div>
                 </div>
             </div>
@@ -66,17 +67,31 @@
                 <div class="Fimagen">
                     <img src="../img/envioURG.png" />
                     <div class="Foverlay">
-                        <h2 class="Ftexto">ENVIOS URGENTES<br>Si lo que necesitas es un envio urgente, si pagas un bonus dependiendo de la carga se enviara en un dia con nuestro sistema de envios Xpress.</h2>
+                        <h3 class="Ftexto">ENVIOS URGENTES<br>Si lo que necesitas es un envio urgente, si pagas un bonus dependiendo de la carga se enviara en un dia con nuestro sistema de envios Xpress.</h3>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="Mcuerpo2">
+        <div class="Mcuerpo2B"><img src="../img/gps-tracker.png"></div>
+        <div class="Mcuerpo2A">
+            <h2>Tracker</h2>
+            <p>Para hacer una búsqueda de tu pedido, hemos contratado un servicio externo<br> el cual nos proporciona localizadores y te enseña donde se encuentra su pedido
+            </p>
+            <aside class="b">
+            <h3><a href="https://www.17track.net/es">Acceder</a></h3>
+        </aside>
+        </div>
+
+    </div>
+
     <div class="Fvaloracion">
-        <h1>Valora nuestro servicio</h1>
+        <h2>Valora nuestro servicio</h2>
         <form action="mailto:Kopplers@gmail.com" method="post">
             <p>Nombre: <input type="text" name="nombre" size="40"></p>
-            <p>E-mail: <input type="number" name="mail" min="1900"></p>
+            <p>E-mail: <input type="email" name="mail" size="50"></p>
             <p>Valoración: <select>
                     <option value="0" selected>0</option>
                     <option value="1">1</option>
@@ -97,4 +112,12 @@
             </p>
         </form>
     </div>
+
+    <footer>
+       <div class="crea"><p  class="XFooter">©2020 <a href="../index1.0.html"> Kopplers </a> All Rights
+              Reserved <br><br> Designed by
+              <a href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk">ForCode++ </a>
+              </div>
+        <div class="logofooter"><img src="../img/logo-uem.png"></div>
+    </footer>
 </body></html>
