--- a/index1.0.html
+++ b/index1.0.html
@@ -15,7 +15,6 @@
                 <a href="#" >Inicio</a>
                 <a href="portfolio/quienessomos.html">Quienes somos</a>
                 <a href="portfolio/servicios.html">Servicios</a>
-                <a href="#">Tracker</a>
                 <a href="portfolio/contacto.html">Contacto</a>
                 <a href="portfolio/trabajaconnosostros.html">Trabaja con nosotros</a>
             </nav>
@@ -28,15 +27,15 @@
     <section class="infos">
         <div class="info">
             <div class="datos">
-                <h3>DONDE ESTAMOS</h3>
-                <p>KOPPLER TRANSPORTE S.L.<br>C/RAPIDEZ, 231<br>MADRID, ESPAÑA, 28002<br><br>TLF: 91 234 56 78<br>EMAIL: info@koppler.com<br><br><br><br><br><br><br><br><br></p>
+                <h3>Donde Estamos</h3>
+                <p>KOPPLER TRANSPORTE S.L.<br>C/RAPIDEZ, 231<br>MADRID, ESPAÑA, 28002<br><br>TLF: 91 234 56 78<br>EMAIL: info@koppler.com<br><br><br><br><br><br><br><br><br><br></p>
                 <a href="portfolio/trabajaconnosostros.html"><div class="btrabaja">&nbsp;&nbsp;TRABAJA CON NOSOTROS&nbsp;</div></a>
             </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12157.987656788486!2d-3.9149567999999992!3d40.37567815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1580325277165!5m2!1ses!2ses"></iframe>
         </div>
         <div class="info2">
             <div class="noticias">
-                <h3>ULTIMAS NOTICIAS</h3>
+                <h3>Noticias Sector</h3>
                 <p><a href="https://www.abc.es/motor/reportajes/abci-hidrogeno-combustible-futuro-planta-cara-petroleo-201904032036_noticia.html?ref=https%3A%2F%2Fwww.google.com%2F">- Las furgonetas nuevas empezaran a utilizar combustible de hidrogeno</a></p>
                 <img src="img/hidrogeno.jpg" />
             </div>
